<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/inicio"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:padding="12dp" />


        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#03A9F4"
            android:onClick="boton"
            android:text="@string/inicio"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="163dp"
            android:layout_height="48dp"
            android:onClick="Registrarse"
            android:text="@string/regist"
            android:textColor="#2196F3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>